src/test/resources/model_test/invalid/FourEntities_model/Country.entity
Countryyyyy { // Bad name
	id : int {@Id};
	name : string;
}
